--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,7 +35,7 @@
     <select name="currency" id="currency"></select>
 
     <label for="startDate">Дата от:</label>
-    <input type="date" id="startDate" name="startDate">
+    <input type="date" id="startDate" name="startDate" min="1991-01-01">
 
     <label for="endDate">Дата до:</label>
     <input type="date" id="endDate" name="endDate">
