add validation on front

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -60,6 +60,8 @@
                     select.appendChild(option);
                 });
             });
+        var today = new Date().toISOString().split('T')[0];
+        document.getElementById('endDate').setAttribute('max', today);
     });
 
     function validateDateRange(startDate, endDate) {
